# vst3_example_plugin_hello_world

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
resource/: HelloWorld.blend  helloworldeditor.uidesc
source/: helloworldcids.h  helloworldcontroller.cpp  helloworldcontroller.h  helloworldentry.cpp  helloworldprocessor.cpp  helloworldprocessor.h  version.h
